<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ConfigActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_edit_text_name"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_edit_text_phone"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_edit_text_patent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/capacityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_edit_text_capacity"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                app:helperTextEnabled="true"
                app:helperText="@string/app_edit_text_capacity_helper" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/destinationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_edit_text_destination"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                app:helperTextEnabled="true"
                app:helperText="@string/app_edit_text_destination_helper" >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/returnEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_edit_text_return"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                app:helperTextEnabled="true"
                app:helperText="@string/app_edit_text_return_helper">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    app:boxBackgroundColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/app_button_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>